src/test/deca/codegen/valid/cast_int_to_float.deca
// Test context, cast d'un cast int sur un float

{
    int x = 5;
    float f = (float) (x);
    println(x);
}