src/test/deca/codegen/invalid/invalid_float_format_insuffisance.deca
// Test parser, invalid float format avec insuffisance

{
    float x = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001;
    x = x / 3;
    println(x);
}